Refactoring of service layers methods. Exception handling is done, also added external API error wrapper. Return types have been modified to fit right way in HTTP processing. Added wrapper for ProducerTemplate to uncouple it's implementation. Some classes have been renamed to conform application logic. Added caching. Repository hierarchy little bit more structured now.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,19 @@
 server:
   port: 8080
-  address: 0.0.0.0
+  error:
+    whitelabel:
+      enabled: false
 spring:
   application:
-    name: User details receiver
+    name: Membership details
+    version: 1.0.0
   main:
     banner-mode: off
-  web:
-  webflux:
-    problemdetails:
-      enabled: off
+application:
+  version: v1
+  caches:
+    user-details-cache: user-details
+    membership-result-cache: membership-details
+logging:
+  level:
+    web: debug
