--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,19 +1,36 @@
+
 server:
-  port: 8080
+  port: ${APP_PORT:8080}
   error:
     whitelabel:
       enabled: false
 spring:
   application:
-    name: Membership details
+    name: MembershipDetails
     version: 1.0.0
   main:
     banner-mode: off
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          jwk-set-uri: http://${KC_CONTAINER_NAME:localhost}:${KC_PORT:8100}/realms/app_realm/protocol/openid-connect/certs
+
 application:
   version: v1
   caches:
     user-details-cache: user-details
     membership-result-cache: membership-details
-logging:
-  level:
-    web: debug
+
+keycloak:
+  id: keycloak
+  host: ${KC_HOST:localhost}
+  port: ${KC_PORT:8100}
+  admin-username: ${KC_ADMIN_USERNAME:admin}
+  admin-password: ${KC_ADMIN_PASSWORD:password}
+  client-id: keycloak-auth-client
+  grant-type: client-credentials
+  admin-token-path: /realms/master/protocol/openid-connect/token
+  clients-settings-path: /admin/realms/app_realm/clients
+  realm-auth-uri: /realms/app_realm/protocol/openid-connect/auth
+  client-scope: app_client
